--- a/index.html
+++ b/index.html
@@ -28,22 +28,22 @@ button {
 	function f(){
 		switch(index){
 			case 0:
-				alert('就像没有预定的剧情');
+				alert('1');
 				break;
 			case 1:
-				alert('感觉拉着我们在靠近');
+				alert('2');
 				break;
 			case 2:
-				alert('萤火虫就是你的眼睛');
+				alert('3');
 				break;
 			case 3:
-				alert('喜欢就一起感受');
+				alert('4');
 				break;
 			case 4:
-				alert('非你不可');
+				alert('5');
 				break;	
 			default:
-				alert('再点键都坏了');
+				alert('无');
 				break;
 		}
 		index++;
